--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,84 @@
-body {
+*{
+  padding:0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Rubik', sans-serif!important;
+}
+html{
+  scroll-behavior: smooth;
+}
+body{
+          background-color: #1e1e2f;
+           color:#fff!important;
+      
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.MuiTooltip-popper {
+top:15px!important;
+}
+.MuiPagination-ul{
+  justify-content: center;
+}
+.MuiTypography-colorTextSecondary ,.MuiPaginationItem-root{
+  color: #fff !important;;
+}
+.MuiDivider-root{
+  background-color:hsla(0,0%,100%,.1)!important;
+    
+}
+.MuiOutlinedInput-notchedOutline{
+    border-color:#2b3553!important;
+    color:#fafafa;
+}
+.MuiRadio-root{
+    color:#2b3553!important;
+}
+.MuiFormLabel-root ,.MuiInputBase-root,.MuiSelect-icon,.MuiCheckbox-root,.MuiListItemIcon-root{
+  color: #fafafa!important;
+}
+
+.MuiTableCell-root {
+    border-bottom: 1px solid hsla(0,0%,100%,.1)!important;
+    color: hsla(0,0%,100%,.7)!important;
+        background-color: #27293d;
+}
+.MuiTableCell-head {
+    font-weight: 600!important;
+    font-size: 1rem!important;
+     background-color: #2b3553!important;
+}
+
+::-webkit-scrollbar{
+  background-color: #2b3553;
+      width: 10px;
+}
+::-webkit-scrollbar-thumb{
+      background-color: #aaa;
+          width: 10px;
+          border-radius: 6px;
+}
+
+.MuiPaper-root {
+    background-color: #1e1e2f!important;
+}
+.slick-prev:before, .slick-next:before {
+    font-size: 28px!important;
+}
+.slick-dots li.slick-active button:before ,.slick-dots li button:before {
+    opacity: .75;
+    color: #fafafa!important;
+}
+.slick-dots {
+    bottom: -40px!important;
+}
+.text-red-500{
+  color: #fe2323;
+    margin-bottom: 1rem;
+    font-weight: 600;
+    font-size: 15px;
+}
+@media  (max-width:596px) {
+  .makeStyles-menu-3{
+    width:auto!important;
+  }
+  
 }
